--- a/.github/workflows/ci-cd-image.yml
+++ b/.github/workflows/ci-cd-image.yml
@@ -32,6 +32,6 @@ jobs:
       - name: start container
         run: docker-compose up -d
       - name: view container
-        run: docker-composer ls
+        run: docker-compose ls
       - name: check container
         run: curl localhost:8080
